--- a/ConsoleApplication1.csproj
+++ b/ConsoleApplication1.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="files\day01input.txt" />
+    <Content Include="files\short.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
